# django-docker-boilerplate

./: .gitignore  Dockerfile  README.md  development.env  docker-compose.yml  install.sh  pyproject.toml
api/: schema.py
settings/: settings.py  urls.py
