[tool.poetry]
name = "django_docker_postgre"
version = "0.0.1"
description = "Django Project with docker and Postgresql database"
authors = ["nobinkhan <nazrulkhan.dk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
strawberry-graphql = "^0.126.2"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
